# app/Http/Controllers/Api/AuthenticationController.php
@@ -16,6 +16,24 @@ use Symfony\Component\HttpFoundation\Response;
 class AuthenticationController extends Controller
 {
 
+     /**
+     * @OA\Get(
+     *     path="/api/user/all",
+     *     tags={"Authentication"},
+     *     operationId="Userall",
+     *     @OA\Response(
+     *         response="default",
+     *         description="successful operation"
+     *     )
+     * )
+     */
+
+    public function index()
+    {
+        $user = User::with('roles')->orderBy('id', 'desc')->paginate(10);
+        return response()->json($user, 200);
+    }
+
     /**
      * @OA\Post(
      *     path="/api/register",
@@ -178,46 +196,7 @@ class AuthenticationController extends Controller
 
     }
 
-    // public function login(Request $request)
-    // {
-    //     $credentials = $request->only('email', 'password');
-    //     //valid credential
-    //     $validator = Validator::make($credentials, [
-    //         'email' => 'required|email',
-    //         'password' => 'required|string|min:6|max:50'
-    //     ]);
 
-    //     if ($validator->fails()) {
-    //         return ResponseHelper::responseValidation($validator->errors());
-    //     }
-
-    //     // Request divalidasi
-    //     // buat token
-    //     try {
-    //         if (! $token = JWTAuth::attempt($credentials)) {
-    //             return response()->json([
-    //             	'success' => false,
-    //             	'message' => 'Login credentials are invalid.',
-    //             ], 400);
-    //         }
-    //     } catch (JWTException $e) {
-    // 	return $credentials;
-    //         return response()->json([
-    //             	'success' => false,
-    //             	'message' => 'Could not create token.',
-    //             ], 500);
-    //     }
-
- 	// 	//Token dibuat, kembali dengan respons sukses dan token jwt
-    //     $user = Auth::user();
-    //     return response()->json([
-    //         'success' => true,
-    //         'token' => $token,
-    //         'user' => array_merge($user->toArray(),
-    //         ['roles' => $user->roles()->get()->toArray()]),
-    //     ]);
-
-    // }
     /**
      * @OA\Get(
      *     path="/api/user",
